# scbench-posttrain

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
data/: delaunay_pilot.jsonl  half_subdivision_curriculum.jsonl  half_subdivision_test.jsonl
environments/half_subdivision_shaped/: README.md  pyproject.toml
environments/half_subdivision_shaped/half_subdivision_shaped/: __init__.py  env.py  geometry.py  parser.py
evals/: __init__.py  delaunay.py  vgb.py
scripts/: bootstrap_prime_rl_workspace.sh  bootstrap_prime_vllm_container.sh  export_prime_weights_to_hf.py  generate_half_subdivision_curriculum.py  run_prime_rl_half_subdivision.sh  run_prime_rl_half_subdivision_h100_2x.sh  run_prime_rl_half_subdivision_h100_8x.sh  run_prime_rl_half_subdivision_h200_4x.sh  run_prime_rl_half_subdivision_smoke.sh  run_verl_grpo_half_subdivision.sh  run_verl_grpo_half_subdivision_smoke.sh  run_vllm_qwen3_8b.sh
src/scbench_posttrain/: __init__.py  delaunay.py  half_subdivision_env.py  inspect.py  tasks.py  tinker.py  vgb.py
tests/: conftest.py  test_delaunay.py  test_evals_delaunay.py  test_imports.py  test_vgb.py  test_vgb_rlm.py
training/prime_rl/: README.md  h100_2x.toml  h100_8x.toml  h200_4x.toml  rl.toml  smoke.toml
training/verl/: README.md  grpo_half_subdivision.yaml  half_subdivision_reward.py  prepare_half_subdivision_data.py
