[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scbench-posttrain"
version = "0.1.0"
description = "Inspect-native Delaunay eval pilot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.1",
  "openai>=2.28.0",
  "pydantic>=2.8",
  "scipy>=1.14",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "ruff>=0.6",
]

[project.optional-dependencies]
inspect = [
  "inspect-ai>=0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/scbench_posttrain"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["external/VisGeomBench"]
