[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scbench-posttrain"
version = "0.1.0"
description = "Inspect-native VGB evals with generic RLM tracing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "scad-format>=1.0.0",
  "filelock>=3.12",
  "matplotlib>=3.9",
  "numpy==1.26.4",
  "openai>=2.28.0",
  "pydantic>=2.8",
  "shapely>=2.1.2",
  "scipy>=1.14",
  "treelib>=1.7",
  "trimesh>=4.11.3",
  "verifiers>=0.1.7.post0",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "ruff>=0.6",
]

[project.optional-dependencies]
inspect = [
  "inspect-ai>=0.3",
]
gpu = [
  "huggingface-hub==0.36.2",
  "transformers==4.57.6",
  "vllm==0.14.0",
]
train = [
  "antlr4-python3-runtime==4.9.3",
  "omegaconf==2.3.0",
  "verl==0.7.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/scbench_posttrain"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["external/VisGeomBench"]
